tests/cases/smoke/invalid/matrix_rank1_rows.dp
var rows = Matrix([1, 2, 3]).rows
